<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cn.lbgongfu.multiddns.InputOldEmailOrPhoneNumberActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radio_group_symbols">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_email"
                    android:id="@+id/radio_email"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_mobile"
                    android:id="@+id/radio_phone" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_kcid"
                    android:id="@+id/radio_kcid" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_username"
                    android:id="@+id/radio_username" />
            </RadioGroup>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radio_group_receive_ways">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_receive_by_email"
                    android:id="@+id/radio_receive_by_email"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_receive_by_phone"
                    android:id="@+id/radio_receive_by_phone" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_receive_by_email_and_phone"
                    android:id="@+id/radio_receive_by_email_and_phone" />
            </RadioGroup>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_input_layout_id">

                <EditText android:id="@+id/field_id" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText android:id="@+id/field_auth_code" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/prompt_auth_code"
                        android:imeActionId="@+id/next_step"
                        android:imeActionLabel="@string/action_next_step"
                        android:imeOptions="actionUnspecified" android:inputType="text"
                        android:ems="@integer/field_auth_code_ems"
                        android:maxLines="1" android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_width="@dimen/auth_code_img_width"
                    android:layout_height="@dimen/auth_code_img_height"
                    android:id="@+id/img_auth_code" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_get_auth_code"
                    android:id="@+id/btn_get_auth_code" />
            </LinearLayout>

            <Button android:id="@+id/btn_next_step" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_next_step"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
